# reflect_pytest

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  SOUL.md  fetch_gcc.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
cmake/: reflection.cmake
doc/: README.md  autonomous_service.md  ipc_flow.dot  ipc_protocol.md  mermaid_prototypes.md  reflection_cheat_sheet.md
doc/agent/: design.md  reflection.md
doc/arch/: autonomous_service.md  design.md  message_hub.md  send_path_asm_analysis.md  send_path_asm_excerpt.md  send_path_lto_analysis.md
doc/ipc/: ipc_flow.dot  protocol.md
doc/reflection/: cheat_sheet.md  system.md
doc/testing/: sil_guide.md
generator/: common.h  doc_generator.h  generate_bindings.cpp  generate_docs.cpp  python_code_generator.h
include/ipc/: message_bus.hpp  messages.hpp  socket_bus.hpp  traits.hpp  udp_bridge.hpp
messages/: autonomous_msgs.h  core_msgs.h  messages.h  msg_base.h  simulation_msgs.h  traits.h
python/reflect_pytest/: __init__.py  udp_client.py
src/: app_components.h  component.h  component_logger.cpp  component_logger.h  generate_bindings.cpp  internal_messages.h  logger.cpp  logger.h  main.cpp  message_bus.cpp  message_bus.h  publisher.h  revision.h  simulator.cpp  simulator.h  socket_bus.cpp  socket_bus.h  traits.h  udp_bridge.cpp  udp_bridge.h
src/services/: autonomous_service.cpp  autonomous_service.h  environment_service.cpp  environment_service.h  kinematics_service.cpp  kinematics_service.h  log_service.cpp  log_service.h  motor_service.cpp  motor_service.h  power_service.cpp  power_service.h  revision_service.cpp  revision_service.h  sensor_service.cpp  sensor_service.h  state_service.cpp  state_service.h  thermal_service.cpp  thermal_service.h
tests/cxx/: test_message_bus.cpp  test_placeholder.cpp  test_socket_bus.cpp
tests/python/: conftest.py  fixtures_ipc.py  test_autonomous.py  test_benchmark.py  test_bridge_enforcement.py  test_lifecycle.py  test_log_message.py  test_revision.py  test_sensor.py  test_simulator.py  test_thermal_env.py  udp_client.py
tests/python/reflect_pytest/: generated.py
